the toggle button for side bar overlaps woth community central so changed css to fix

--- a/static/styles.css
+++ b/static/styles.css
@@ -28,9 +28,10 @@ h2 {
     box-sizing: border-box;
     transition: left 0.3s ease-in-out;
     box-shadow: 4px 0 15px rgba(0, 0, 0, 0.3);
-    z-index: 1000;
     display: flex;
     flex-direction: column;
+    padding-top: 80px; 
+    z-index: 1000;
 }
 
 .nav-toggle:checked ~ .sidebar {
